--- a/Views/Alumno/Index.cshtml
+++ b/Views/Alumno/Index.cshtml
@@ -5,12 +5,13 @@
     ViewData["Title"] = "Asignatura";
 
 }
+<p><strong>::Desde la vista normal </strong></p>
 
 <h1>Asignatura: @ViewData["Title"]</h1>
 <h2>Nombre: @Model.Nombre </h2>
 <p>Fecha: @Model.FechaInicio</p>
 
-<p><strong>Desde la vista normal </strong></p>
+<p><strong>>>Desde la vista parcial </strong></p>
 <partial name="ObjetoEscuelaSimple" />
 
 <p><strong><i>Año de fundación: @ViewBag.CosaDinamica</i></strong></p>
